syntax = "proto3";

package plugin;

option go_package = "squad/plugin/proto";

// ToolPlugin is the service that all tool plugins must implement
service ToolPlugin {
    // Configure passes plugin settings from HCL config
    rpc Configure(ConfigureRequest) returns (ConfigureResponse);

    // Call invokes a tool on the plugin with the given payload
    rpc Call(CallRequest) returns (CallResponse);

    // GetToolInfo returns metadata about a specific tool
    rpc GetToolInfo(GetToolInfoRequest) returns (GetToolInfoResponse);

    // ListTools returns info for all tools this plugin provides
    rpc ListTools(ListToolsRequest) returns (ListToolsResponse);
}

message ConfigureRequest {
    map<string, string> settings = 1;
}

message ConfigureResponse {
    bool success = 1;
    string error = 2;
}

message CallRequest {
    string tool_name = 1;
    string payload = 2;
}

message CallResponse {
    string result = 1;
}

message GetToolInfoRequest {
    string tool_name = 1;
}

message GetToolInfoResponse {
    ToolInfo tool = 1;
}

message ListToolsRequest {}

message ListToolsResponse {
    repeated ToolInfo tools = 1;
}

// ToolInfo contains the metadata for a tool
message ToolInfo {
    string name = 1;
    string description = 2;
    string schema_json = 3;  // JSON schema for the tool's input parameters
}
